@startuml
hide circle


class Plan {
    id
    name
    description
    minutes
    maxUsersDevices
    musicCollections
    musicSuggestions
    monthlyFee
    annualFee
    isPromoted
    isDeactivated
    isCeased
    feeRevisions
}

class DisplayRevenue {
    private List<RevenueData> revenues;
    private String planName;

}



class Subscriptions {
    id
    startDate
    endDate
    paymentType
    isActive
}

class User {
    id
    name
    email
    country
}

class Device {
    id
    macAddress
    name
    description
}

class Role {
    id
    function
}

class Dashboard {
id
    totalActiveSubscriptions
    totalRevenue
    monthlyNewSubscriptions
    monthlyCanceledSubscriptions
    planName
    month
}

User "1" -- "0..*" Plan: create >
User "1" -- "1" Subscriptions: Subscribes >
Subscriptions "1" -- "0..6" Device : has >
Subscriptions "0..*" -- "1" Plan: has >
User "1" -- "0..1" Role : has >
User "1..*" -- "0..*" Dashboard : can access >
User "1..*" --right "0..*" DisplayRevenue : can access >

@enduml
